--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
-    "spotify-web-api-js": "^1.5.1",
+    "spotify-web-api-node": "^5.0.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
